<resources>
    <string name="app_name">Jide</string>
    <string name="configure">Configure Jide Widget</string>
    <string name="configure2">To help accommodate the limited space of a widget, you can optionally override the card template used and pick out just one field for the front or back; the card type from the deck is still used internally for review/learning-tracking purposes. If you leave one of the following fields empty, the normal template for the card will be used.</string>
    <string name="add_widget">Add Widget</string>
    <string name="configure_frontfield">Note field/card template on front of card:</string>
    <string name="configure_backfield">Note field/card template on back of card:</string>
    <string name="configure_extra_backfield">Extra back (answer) note field/card template (optional):</string>
    <string name="widget_good_button">Good</string>
    <string name="widget_bad_button">Bad</string>
    <string name="widget_back_button"><![CDATA[<]]></string>
    <string name="configure_deck">Deck:</string>
    <string name="run_button">Setup Automatic Wallpaper</string>
    <string name="wallpaper_deck">Deck:</string>
    <string name="wallpaper_lockscreen_firstfield">Lockscreen First Note Field / Card Template:</string>
    <string name="wallpaper_lockscreen_secondfield">Lockscreen Second Note Field / Card Template:</string>
    <string name="wallpaper_launcher_firstfield">Launcher First Note Field / Card Template:</string>
    <string name="wallpaper_launcher_secondfield">Launcher Second Note Field / Card Template:</string>
    <string name="wallpaper_same_lockscreen_launcher">Always same note for lockscreen and launcher</string>
    <string name="wallpaper_frequency">Change frequency (minutes):</string>
    <string name="not_configured">not configured</string>
    <string name="no_available_card">[no available card]</string>
    <string name="strip_html_formatting_switch">Strip HTML Formatting</string>
    <string name="use_note_fields_instead_of_card_templates">Use individual note fields instead of card templates</string>
    <string name="wallpaper_lockscreen_use_note_fields">Use note fields (not card templates) in lockscreen</string>
    <string name="wallpaper_launcher_use_note_fields">Use note fields (not card templates) in launcher</string>
    <string name="stop_automatic_wallpaper">Stop automatic wallpaper</string>
    <string-array name="wallpaper_frequency_units">
        <item name="hours">Hours</item>
        <item name="minutes">Minutes</item>
    </string-array>
</resources>
