<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/wallpaper_deck_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper_deck"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/wallpaper_deck_spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_deck_label"
        tools:layout_editor_absoluteX="-13dp" />

    <TextView
        android:id="@+id/wallpaper_lockscreen_firstfield_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper_lockscreen_firstfield"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_lockscreen_use_note_fields" />

    <EditText
        android:id="@+id/wallpaper_lockscreen_firstfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:text="lockscreen first field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_lockscreen_firstfield_label"
        tools:layout_editor_absoluteX="99dp" />

    <TextView
        android:id="@+id/wallpaper_lockscreen_secondfield_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper_lockscreen_secondfield"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_lockscreen_firstfield"
        tools:layout_editor_absoluteX="168dp" />

    <EditText
        android:id="@+id/wallpaper_lockscreen_secondfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:text="lockscreen second field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_lockscreen_secondfield_label"
        tools:layout_editor_absoluteX="90dp" />

    <Switch
        android:id="@+id/wallpaper_same_lockscreen_launcher_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/wallpaper_same_lockscreen_launcher"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_lockscreen_secondfield" />

    <TextView
        android:id="@+id/wallpaper_launcher_firstfield_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper_launcher_firstfield"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_launcher_use_note_fields" />

    <EditText
        android:id="@+id/wallpaper_launcher_firstfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        tools:text="launcher first field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_launcher_firstfield_label"
        tools:layout_editor_absoluteX="81dp" />

    <TextView
        android:id="@+id/wallpaper_launcher_secondfield_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper_launcher_secondfield"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_launcher_firstfield"
        tools:layout_editor_absoluteX="154dp" />

    <EditText
        android:id="@+id/wallpaper_launcher_secondfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_launcher_secondfield_label"
        tools:text="launcher second field" />

    <Button
        android:id="@+id/run_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_button"
        app:layout_constraintBottom_toTopOf="@+id/stop_automatic_wallpaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_frequency" />

    <Button
        android:id="@+id/stop_automatic_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_automatic_wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wallpaper_frequency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/wallpaper_frequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_launcher_secondfield"
        tools:text="Wallpaper Frequency" />

    <EditText
        android:id="@+id/wallpaper_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/run_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_frequency_label"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/wallpaper_lockscreen_use_note_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/wallpaper_lockscreen_use_note_fields"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_deck_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="50dp" />

    <Switch
        android:id="@+id/wallpaper_launcher_use_note_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:text="@string/wallpaper_launcher_use_note_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallpaper_same_lockscreen_launcher_checkbox" />

</androidx.constraintlayout.widget.ConstraintLayout>